--- a/Lists.html
+++ b/Lists.html
@@ -106,11 +106,18 @@ Fuzzy search 갤s 에서는 textarea 로 바꿔야 제대로 돌아가는듯?
 <a href="http://kipid.tistory.com/entry/Personal-Bookmarks">Personal Bookmarks (괜찮은 사이트들 모음)</a> 는 따로 작성.
 </div>
 
+카테고리 좀 다시 정리하고 싶다;;;
+
 
 
 ##[.no-sec-N#sec-Newest] Newest posts
 
 <ul>
+<li><a href="http://kipid.tistory.com/entry/2014-2015-%EC%B4%9D%EB%A6%AC%ED%9B%84%EB%B3%B4-%EC%9D%B4%EC%99%84%EA%B5%AC-%EB%AC%B8%EC%B0%BD%EA%B7%B9-%EC%95%88%EB%8C%80%ED%9D%AC-%ED%94%84%EB%A1%9C%ED%95%84-%EB%B9%84%EA%B5%90">2014~2015 총리후보, 이완구(李完九), 문창극(文昌克), 안대희(安大熙) 프로필 비교</a>, 2014-06-14</li>
+<li><a href="http://kipid.tistory.com/entry/Vertical-center-align-by-CSS-in-HTML">Vertical center align by CSS in HTML</a>, 2015-02-05</li>
+<li><a href="http://kipid.tistory.com/entry/Java-Serializable-Object-to-Byte-Array-or-SQL-BLOB">Java Serializable Object to Byte Array (byte[] or SQL BLOB)</a>, 2015-02-05</li>
+<li><a href="http://kipid.tistory.com/entry/Change-browser-URL-without-reloading-a-page">Change browser URL (window.location) without reloading or redirecting a page</a>, 2015-02-05</li>
+<li><a href="http://kipid.tistory.com/entry/Some-lights-are-slower-than-the-speed-of-light">특정 빛은 빛의 속도보다 느리다? (Some lights are slower than the speed of light?)</a>, 2015-01-31</li>
 <li><a href="http://kipid.tistory.com/entry/Sharing-URI-through-SNS">SNS 내보내기/공유하기 (Sharing a URI link through SNS)</a>, 2015-01-16</li>
 <li><a href="http://kipid.tistory.com/entry/Email-by-JAVA">Email by JAVA (자바 프로그램을 이용해 이메일 보내기)</a>, 2015-01-15</li>
 <li><a href="http://kipid.tistory.com/entry/2015-%EB%B0%95%EA%B7%BC%ED%98%9C-%EB%8C%80%ED%86%B5%EB%A0%B9-%EC%8B%A0%EB%85%84-%EA%B8%B0%EC%9E%90%ED%9A%8C%EA%B2%AC-%EC%98%81%EC%83%81">2015 박근혜 대통령 신년 기자회견 영상</a>, 2015-01-12</li>
@@ -120,33 +127,10 @@ Fuzzy search 갤s 에서는 textarea 로 바꿔야 제대로 돌아가는듯?
 <li><a href="http://kipid.tistory.com/entry/Encode-Unescape-and-Decode-Escape-URI-Component">Encode/Unescape and Decode/Escape URI Component</a>, 2015-01-04</li>
 <li><a href="http://kipid.tistory.com/entry/Cloud-Server-Services-eg-Amazon-Web-Services">Cloud Server Services (eg. Amazon Web Services)</a>, 2015-01-03</li>
 <li><a href="http://kipid.tistory.com/entry/KARA-HARA-On-and-Off-at-MBC-Music">구하라의 On and Off at MBC Music</a>, 2014-12-30</li>
-<li><a href="http://kipid.tistory.com/entry/%EC%8B%9C%EB%8C%80%EA%B3%B5%EA%B0%90-%EA%B7%B8%EB%93%A4%EA%B3%BC-%ED%86%B5%ED%95%98%EB%8A%94-%EA%B8%B8-%EC%B2%AD%EB%85%84-%EB%B9%88%EA%B3%A4">시대공감 -  청년 빈곤. 그들과 통하는 길.</a>, 2014-12-29</li>
+<!-- <li><a href="http://kipid.tistory.com/entry/%EC%8B%9C%EB%8C%80%EA%B3%B5%EA%B0%90-%EA%B7%B8%EB%93%A4%EA%B3%BC-%ED%86%B5%ED%95%98%EB%8A%94-%EA%B8%B8-%EC%B2%AD%EB%85%84-%EB%B9%88%EA%B3%A4">시대공감 -  청년 빈곤. 그들과 통하는 길.</a>, 2014-12-29</li>
 <li><a href="http://kipid.tistory.com/entry/SAF-SBS-Awards-Festival">SAF (SBS Awards Festival) 움짤 모음</a>, 2014-12-28</li>
 <li><a href="http://kipid.tistory.com/entry/%EC%88%98%EB%A9%B4%EC%9D%98-%EA%B3%BC%ED%95%99-Science-of-Sleeping">수면의 과학 (Science of Sleeping)</a>, 2014-12-28 (미완)</li>
-<li><a href="http://kipid.tistory.com/entry/Auto-Completion-and-Fuzzy-Search">Auto Completion, and Fuzzy Search</a>, 2014-12-28 (비공개 포스트)</li>
-<li><a href="http://kipid.tistory.com/entry/%EC%9B%90%EC%9E%90%EB%A0%A5-%EB%B0%9C%EC%A0%84%EC%86%8C%EC%99%80-%EB%B0%A9%EC%82%AC%EC%84%A0-%EA%B7%B8%EB%A6%AC%EA%B3%A0-%EC%95%88%EC%A0%84%EA%B0%90%EC%8B%9C-%EC%8B%9C%EC%8A%A4%ED%85%9C">원자력 발전소와 방사선, 그리고 안전/감시 시스템</a>, 2014-12-23</li>
-<li><a href="http://kipid.tistory.com/entry/Data-ENCRYPT">Data ENCRYPT (정보 암호화)</a>, 2014-12-21</li>
-<li><a href="http://kipid.tistory.com/entry/Number-and-Bit-operations-in-JAVA-and-Javascript">Number and Bit operations in JAVA and Javascript</a>, 2014-12-21</li>
-<li><a href="http://kipid.tistory.com/entry/Truncated-manybody-dynamics-of-interacting-bosons-A-variational-principle-with-error-monitoring">Truncated many-body dynamics of interacting bosons: A variational principle with error monitoring</a>, 2014-12-17</li>
-<li><a href="http://kipid.tistory.com/entry/%EB%B3%B8%EC%9D%B8-%EC%B1%85%EC%9D%84-%ED%86%B5%ED%95%B4-%EB%B0%94%EB%9D%BC%EB%B3%B8-37%EC%84%B8%EC%9D%98-%EB%B0%95%EA%B7%BC%ED%98%9C">본인 책을 통해 바라본 37세의 박근혜</a>, 2014-12-16</li>
-<li><a href="http://kipid.tistory.com/entry/DSP-friends-White-Letter-Christmas-special">DSP friends - White Letter (Christmas special)</a>, 2014-12-15</li>
-<li><a href="http://kipid.tistory.com/entry/HTML-event-handler">HTML event handler</a>, 2014-12-15</li>
-<li><a href="http://kipid.tistory.com/entry/%EC%86%8C%EC%8B%9C%EC%98%A4%ED%8C%A8%EC%8A%A4-Sociopaths-%EC%99%80%EB%8A%94-%EC%95%84%EC%98%88-%EC%83%81%EC%A2%85%ED%95%98%EC%A7%80-%EC%95%8A%EB%8A%94-%EA%B2%83%EC%9D%B4-%EC%A2%8B%EB%8B%A4">소시오패스 (Sociopaths) 와는 아예 상종하지 않는 것이 좋다.</a>, 2014-12-11</li>
-<li><a href="http://kipid.tistory.com/entry/2014-MAMA-in-HONG-KONG">2014 MAMA in HONG KONG</a>, 2014-12-05</li>
-<!-- <li><a href="http://kipid.tistory.com/entry/%EB%8F%99%EC%84%B1%EC%95%A0-LGBT-%EA%B4%80%EB%A0%A8-%EA%B0%9C%EC%9D%B8%EC%9D%98%EA%B2%AC">동성애, LGBT 관련 개인의견</a>, 2014-12-05</li>
-<li><a href="http://kipid.tistory.com/entry/Personal-selection-of-Dances-Performances">Personal selection of Dances/Performances</a>, 2014-11-26</li>
-<li><a href="http://kipid.tistory.com/entry/Introducing-what-we-are-making-Recoevenet">Introducing what we are making : Recoeve.net</a>, 2014-11-21</li>
-<li><a href="http://kipid.tistory.com/entry/%EB%B6%80%EC%B1%84%EC%A3%BC%EB%8F%84-%EC%84%B1%EC%9E%A5%EC%97%90%EC%84%9C-%EC%86%8C%EB%93%9D%EC%A3%BC%EB%8F%84-%EC%84%B1%EC%9E%A5%EC%9C%BC%EB%A1%9C">부채주도 성장에서 소득주도 성장으로</a>, 2014-11-14</li>
-<li><a href="http://kipid.tistory.com/entry/%EC%8A%A4%EB%A7%88%ED%8A%B8-%EC%A7%80%EA%B0%91-Smart-wallet-Apple-pay-Google-wallet-%EB%93%B1-%EC%9D%80-%EC%96%B4%EB%8A%90-%EB%B0%A9%ED%96%A5%EC%9C%BC%EB%A1%9C-%EB%B0%9C%EC%A0%84%ED%95%A0%EA%B9%8C">스마트 지갑 (Smart wallet: Apple pay, Google wallet 등) 은 어느 방향으로 발전할까?</a>, 2014-11-11</li>
-<li><a href="http://kipid.tistory.com/entry/%EA%B3%A0%ED%86%B5%EC%97%86%EC%9D%B4-%EC%A3%BD%EB%8A%94-%EB%B0%A9%EB%B2%95-%EC%95%88%EB%9D%BD%EC%82%AC-%EB%B0%A9%EB%B2%95-%EC%9E%90%EC%82%B4%ED%95%A0-%EA%B6%8C%EB%A6%AC">고통없이 죽는 방법 (안락사 방법), 자살할 권리</a>, 2014-11-21</li>
-<li><a href="http://kipid.tistory.com/entry/Laniakea-Our-home-supercluster">Laniakea: Our home supercluster</a>, 2014-09-19</li>
-<li><a href="http://kipid.tistory.com/entry/HTTP-Cookie-in-Web-HTML-Javascript-and-Server">HTTP Cookie in Web / HTML / Javascript and Server</a>, 2014-08-31</li>
-<li><a href="http://kipid.tistory.com/entry/Decoherence-the-Measurement-Problem-of-Quantum-Mechanics">Decoherence, the Measurement Problem of Quantum Mechanics</a>, 2014-07-29</li>
-<li><a href="http://kipid.tistory.com/entry/%EB%85%B8%ED%9A%8C%EC%B0%AC%E9%AD%AF%E6%9C%83%E7%87%A6-vs-%EB%82%98%EA%B2%BD%EC%9B%90%E7%BE%85%E5%8D%BF%E7%91%97-%ED%94%84%EB%A1%9C%ED%95%84-%EB%B9%84%EA%B5%90">노회찬(魯會燦) vs 나경원(羅卿瑗) 프로필 비교</a>, 2014-07-24</li>
-<li><a href="http://kipid.tistory.com/entry/201406-%EC%A0%95%EB%B6%80%EA%B0%9C%EA%B0%81-%EC%9E%A5%EA%B4%80-%EB%B0%8F-%EA%B0%81-%ED%9B%84%EB%B3%B4%EB%93%A4-%ED%94%84%EB%A1%9C%ED%95%84-%EB%AA%A8%EC%9D%8C">2014-06 정부개각, 장관 및 각 후보들 프로필 모음</a>, 2014-06-23</li>
-<li><a href="http://kipid.tistory.com/entry/criminal-investigation-NIS-cheating">국정원 대선개입 수사 - 서울경찰청 사이버 범죄수사대 디지털 증거분석실 CCTV 녹취록</a>, 2014-06-22</li>
-<li><a href="http://kipid.tistory.com/entry/shortkey-in-tistory-or-html">티스토리 단축키 설정 (+단축키 추가/수정하기)</a>, 2014-06-20</li>
-<li><a href="http://kipid.tistory.com/entry/Super-Easy-Edit-SEE-of-docuK">Super Easy Edit (SEE) of docuK</a>, 2014-06-20</li> -->
+<li><a href="http://kipid.tistory.com/entry/Auto-Completion-and-Fuzzy-Search">Auto Completion, and Fuzzy Search</a>, 2014-12-28 (비공개 포스트)</li> -->
 </ul>
 
 
@@ -221,6 +205,7 @@ Fuzzy search 갤s 에서는 textarea 로 바꿔야 제대로 돌아가는듯?
 ###[#sec-Physics-News] News (개인적으로 관심있게 본 물리/수학 관련 뉴스들 정리.)
 
 <ul>
+<li><a href="http://kipid.tistory.com/entry/Some-lights-are-slower-than-the-speed-of-light">특정 빛은 빛의 속도보다 느리다? (Some lights are slower than the speed of light?)</a>, 2015-01-31</li>
 <li><a href="http://kipid.tistory.com/entry/Laniakea-Our-home-supercluster">Laniakea: Our home supercluster</a>, 2014-09-19</li>
 <li><a href="http://kipid.tistory.com/entry/BICEP2-evidence-of-Inflation-and-Gravitational-wave">BICEP2: 중력파와 급팽창 이론(인플레이션, inflation theory)의 직접적인 증거</a>, 2014-04-07</li>
 <li><a class="emph" href="http://kipid.tistory.com/entry/Black-Hole-Mystery-Wrapped-in-Firewall-Paradox">방화벽 역설(Firewall paradox)로 인한 블랙홀 미스테리</a>, 2014-02-10</li>
@@ -252,12 +237,20 @@ Fuzzy search 갤s 에서는 textarea 로 바꿔야 제대로 돌아가는듯?
 <li><a href="http://kipid.tistory.com/entry/Citing-the-references-automatically-in-HTML-like-LaTeX">Citing the references automatically in HTML (like LaTeX)</a>, 2014-03-02</li>
 <li><a href="http://kipid.tistory.com/entry/introducing-LaTeX-and-Guides">LaTeX(라텍스, 레이텍) 소개 및 설명서(Guide)들</a>, 2014-03-24</li>
 <li><a class="emph" href="http://kipid.tistory.com/entry/Delayed-Loading-in-HTML-by-JavaScript-jQuery">Delayed Loading in HTML by JavaScript (+jQuery)</a>, 2014-05-29</li>
-<li><a href="http://kipid.tistory.com/entry/Customized-styling-of-scroll-bars-in-HTML">Customized styling of scroll bars in HTML</a>, 2014-05-26</li>
+<li><a href="http://kipid.tistory.com/entry/HTML-%EC%97%90%EC%84%9C-%EB%8F%99%EC%98%81%EC%83%81-%EC%97%B0%EC%86%8D-%EC%9E%AC%EC%83%9D%ED%95%98%EA%B8%B0-playlist-shuffle-replay">HTML 에서 동영상 연속 재생하기 (playlist, shuffle, replay)</a>, 2015-01-07</li>
+</ul>
+
+
+
+#### JavaScript
+
+<ul>
+<li><a class="emph" href="http://kipid.tistory.com/entry/Learning-JavaScript">Learning JavaScript, especially class-like Constructor function and Property Inheritance through prototype/__proto__ chaining</a>, 2014-05-21</li>
+<li><a class="emph" href="http://kipid.tistory.com/entry/Javascript-namespace-or-encapsulation">Javascript namespace or encapsulation</a>, 2014-06-03</li>
+<li><a href="http://kipid.tistory.com/entry/Learning-AngularJS">Learning AngularJS</a>, 2015-01-05</li>
 <li><a href="http://kipid.tistory.com/entry/Getting-Data-from-Google-Spreadsheet">Getting Data from Google Spreadsheet or Excel</a>, 2014-06-13</li>
 <li><a href="http://kipid.tistory.com/entry/shortkey-in-tistory-or-html">티스토리 단축키 설정 (+단축키 추가/수정하기)</a>, 2014-06-20</li>
 <li><a href="http://kipid.tistory.com/entry/HTML-event-handler">HTML event handler</a>, 2014-12-15</li>
-<li><a href="http://kipid.tistory.com/entry/HTML-%EC%97%90%EC%84%9C-%EB%8F%99%EC%98%81%EC%83%81-%EC%97%B0%EC%86%8D-%EC%9E%AC%EC%83%9D%ED%95%98%EA%B8%B0-playlist-shuffle-replay">HTML 에서 동영상 연속 재생하기 (playlist, shuffle, replay)</a>, 2015-01-07</li>
-<li><a href="http://kipid.tistory.com/entry/Sharing-URI-through-SNS">SNS 내보내기/공유하기 (Sharing a URI link through SNS)</a>, 2015-01-16</li>
 </ul>
 
 
@@ -265,16 +258,9 @@ Fuzzy search 갤s 에서는 textarea 로 바꿔야 제대로 돌아가는듯?
 #### JAVA and JavaScript
 
 <ul>
-<li><a href="http://kipid.tistory.com/entry/Installing-and-Learning-JAVA">Installing and Learning JAVA</a>, 2014-06-10</li>
-<li><a class="emph" href="http://kipid.tistory.com/entry/Learning-JavaScript">Learning JavaScript, especially class-like Constructor function and Property Inheritance through prototype/__proto__ chaining</a>, 2014-05-21</li>
-<li><a href="http://kipid.tistory.com/entry/Learning-AngularJS">Learning AngularJS</a>, 2015-01-05</li>
-<li><a href="http://kipid.tistory.com/entry/Learning-AJAX">Learning AJAX</a>, 2014-06-02</li>
-
-<li><a class="emph" href="http://kipid.tistory.com/entry/Javascript-namespace-or-encapsulation">Javascript namespace or encapsulation</a>, 2014-06-03</li>
 <li><a href="http://kipid.tistory.com/entry/Regular-Expression-and-match-replace-method-in-javascript-and-java">Regular Expression (정규 표현식), and match/replace method in JavaScript and JAVA</a>, 2014-05-03</li>
 <li><a href="http://kipid.tistory.com/entry/Encode-Unescape-and-Decode-Escape-URI-Component">Encode/Unescape and Decode/Escape URI Component</a>, 2015-01-04</li>
 <li><a href="http://kipid.tistory.com/entry/Number-and-Bit-operations-in-JAVA-and-Javascript">Number and Bit operations in JAVA and Javascript</a>, 2014-12-21</li>
-<li><a class="emph" href="http://kipid.tistory.com/entry/HTTP-Cookie-in-Web-HTML-Javascript-and-Server">HTTP Cookie in Web / HTML / Javascript and Server</a>, 2014-08-31</li>
 </ul>
 
 
@@ -285,7 +271,10 @@ Fuzzy search 갤s 에서는 textarea 로 바꿔야 제대로 돌아가는듯?
 <li><a href="http://kipid.tistory.com/entry/Learning-Vertx">Learning Vert.x</a>, 2014-05-23</li>
 <li><a href="http://kipid.tistory.com/entry/Learning-Nodejs">Learning Node.js</a>, 2014-05-22</li>
 <li><a href="http://kipid.tistory.com/entry/Learning-PHP">Learning PHP</a>, 2014-05-22</li>
+<li><a href="http://kipid.tistory.com/entry/Learning-AJAX">Learning AJAX</a>, 2014-06-02</li>
 <li><a href="http://kipid.tistory.com/entry/Cloud-Server-Services-eg-Amazon-Web-Services">Cloud Server Services (eg. Amazon Web Services)</a>, 2015-01-03</li>
+<li><a class="emph" href="http://kipid.tistory.com/entry/HTTP-Cookie-in-Web-HTML-Javascript-and-Server">HTTP Cookie in Web / HTML / Javascript and Server</a>, 2014-08-31</li>
+<li><a href="http://kipid.tistory.com/entry/Change-browser-URL-without-reloading-a-page">Change browser URL (window.location) without reloading or redirecting a page</a>, 2015-02-05</li>
 <li><a href="http://kipid.tistory.com/entry/Email-by-JAVA">Email by JAVA (자바 프로그램을 이용해 이메일 보내기)</a>, 2015-01-15</li>
 </ul>
 
@@ -294,6 +283,8 @@ Fuzzy search 갤s 에서는 textarea 로 바꿔야 제대로 돌아가는듯?
 #### Etc. (CSS, graph, widget, web performance)
 
 <ul>
+<li><a href="http://kipid.tistory.com/entry/Vertical-center-align-by-CSS-in-HTML">Vertical center align by CSS in HTML</a>, 2015-02-05</li>
+<li><a href="http://kipid.tistory.com/entry/Customized-styling-of-scroll-bars-in-HTML">Customized styling of scroll bars in HTML</a>, 2014-05-26</li>
 <li><a href="http://kipid.tistory.com/entry/CSS3-examples">CSS3 examples</a>, 2014-04-25</li>
 <li><a href="http://kipid.tistory.com/entry/Responsible-web-design-with-css-media-query">반응형 웹 만들기 (Responsible web design with css media query)</a>, 2014-03-06</li>
 <li><a href="http://kipid.tistory.com/entry/Improving-web-performance">Improving web performance</a>, 2014-02-10</li>
@@ -301,6 +292,7 @@ Fuzzy search 갤s 에서는 textarea 로 바꿔야 제대로 돌아가는듯?
 </ul>
 <div class="p"></div>
 <ul>
+<li><a href="http://kipid.tistory.com/entry/Sharing-URI-through-SNS">SNS 내보내기/공유하기 (Sharing a URI link through SNS)</a>, 2015-01-16</li>
 <li><a href="http://kipid.tistory.com/entry/embedding-twitter-tweet">트위터 트윗 퍼오기</a>, 2014-02-11</li>
 <li><a href="http://kipid.tistory.com/entry/Facebook-comment-test">댓글 플러그인 | 위젯 (SNS comment plug-in | widget)</a>, 2014-01-17</li>
 <li><a href="http://kipid.tistory.com/entry/Font-test">여러가지 글꼴 테스트 (Font test)</a>, 2014-01-20</li>
@@ -311,6 +303,8 @@ Fuzzy search 갤s 에서는 textarea 로 바꿔야 제대로 돌아가는듯?
 ###[#sec-IT-Algorithm-Database] Algorithm and Database
 
 <ul>
+<li><a href="http://kipid.tistory.com/entry/Installing-and-Learning-JAVA">Installing and Learning JAVA</a>, 2014-06-10</li>
+<li><a href="http://kipid.tistory.com/entry/Java-Serializable-Object-to-Byte-Array-or-SQL-BLOB">Java Serializable Object to Byte Array (byte[] or SQL BLOB)</a>, 2015-02-05</li>
 <li><a href="http://kipid.tistory.com/entry/Data-ENCRYPT">Data ENCRYPT (정보 암호화)</a>, 2014-12-21</li>
 <li><a href="http://kipid.tistory.com/entry/Machine-Learning">기계 학습 (Machine Learning)</a>, 2014-04-28</li>
 <li><a href="http://kipid.tistory.com/entry/Sorting-Algorithm">정렬법 (Sorting Algorithm)</a>, 2014-02-10</li>
@@ -379,7 +373,7 @@ Fuzzy search 갤s 에서는 textarea 로 바꿔야 제대로 돌아가는듯?
 <li><a href="http://kipid.tistory.com/entry/%EB%B0%95%EC%9B%90%EC%88%9C%E6%9C%B4%E5%85%83%E6%B7%B3-vs-%EC%A0%95%EB%AA%BD%EC%A4%80%E9%84%AD%E5%A4%A2%E6%BA%96-%ED%94%84%EB%A1%9C%ED%95%84-%EB%B9%84%EA%B5%90">박원순(朴元淳) vs 정몽준(鄭夢準) 프로필 비교</a>, 2014-05-25</li>
 <li><a href="http://kipid.tistory.com/entry/%EB%85%B8%ED%9A%8C%EC%B0%AC%E9%AD%AF%E6%9C%83%E7%87%A6-vs-%EB%82%98%EA%B2%BD%EC%9B%90%E7%BE%85%E5%8D%BF%E7%91%97-%ED%94%84%EB%A1%9C%ED%95%84-%EB%B9%84%EA%B5%90">노회찬(魯會燦) vs 나경원(羅卿瑗) 프로필 비교</a>, 2014-07-24</li>
 <li><a href="http://kipid.tistory.com/entry/201406-%EC%A0%95%EB%B6%80%EA%B0%9C%EA%B0%81-%EC%9E%A5%EA%B4%80-%EB%B0%8F-%EA%B0%81-%ED%9B%84%EB%B3%B4%EB%93%A4-%ED%94%84%EB%A1%9C%ED%95%84-%EB%AA%A8%EC%9D%8C">2014-06 정부개각, 장관 및 각 후보들 프로필 모음</a>, 2014-06-23</li>
-<li><a href="http://kipid.tistory.com/entry/2014-%EC%B4%9D%EB%A6%AC%ED%9B%84%EB%B3%B4-%EB%AC%B8%EC%B0%BD%EA%B7%B9-vs-%EC%95%88%EB%8C%80%ED%9D%AC-%ED%94%84%EB%A1%9C%ED%95%84-%EB%B9%84%EA%B5%90">2014 총리후보, 문창극(文昌克) vs 안대희(安大熙) 프로필 비교</a>, 2014-06-14</li>
+<li><a href="http://kipid.tistory.com/entry/2014-2015-%EC%B4%9D%EB%A6%AC%ED%9B%84%EB%B3%B4-%EC%9D%B4%EC%99%84%EA%B5%AC-%EB%AC%B8%EC%B0%BD%EA%B7%B9-%EC%95%88%EB%8C%80%ED%9D%AC-%ED%94%84%EB%A1%9C%ED%95%84-%EB%B9%84%EA%B5%90">2014~2015 총리후보, 이완구(李完九), 문창극(文昌克), 안대희(安大熙) 프로필 비교</a>, 2014-06-14</li>
 </ul>
 
 
