designed by +kipid

--- a/skin.html
+++ b/skin.html
@@ -553,7 +553,7 @@
 			<a href="[##_owner_url_##]/entry/post">글쓰기</a>
 		</div>
 		<div class="copyright">
-			<a href="[##_blog_link_##]"> [##_blogger_##]</a>'s Blog is powered by <a href="http://daum.net">Daum</a> / Designed by <a href="http://www.tistory.com">Tistory</a>
+			<a href="[##_blog_link_##]"> [##_blogger_##]</a>'s Blog is powered by <a href="http://daum.net">Daum</a> / Designed by <a href="http://www.tistory.com">Tistory</a>+<a href="http://kipid.tistory.com/entry/Lists">kipid</a>
 		</div>
 	</div>
 </s_t3>
