--- a/Lists.html
+++ b/Lists.html
@@ -103,7 +103,7 @@ Fuzzy search 갤s 에서는 textarea 로 바꿔야 제대로 돌아가는듯?
 단축키 (T: Table of Contents, F: Forward Section, D: Previous Section) 도 활용해 보시길.
 
 <div class="p">
-<a href="http://kipid.tistory.com/entry/Personal-Bookmarks">Personal Bookmarks (괜찮은 사이트들 모음)</a> 는 따로 작성.
+<a href="http://kipid.tistory.com/entry/Personal-Bookmarks">Personal Bookmarks (괜찮은 사이트들 모음)</a> 는 따로 작성. <a href="http://recoeve.net/">Recoeve.net</a> 알파 테스트 서비스 시작했습니다. 많이 방문해 주시길...ㅋ Recoeve.net 상의 제 페이지는 <a href="http://recoeve.net/user/kipid">kipid on Recoeve.net</a> 입니다.
 </div>
 
 카테고리 좀 다시 정리하고 싶다;;;
@@ -113,11 +113,18 @@ Fuzzy search 갤s 에서는 textarea 로 바꿔야 제대로 돌아가는듯?
 ##[.no-sec-N#sec-Newest] Newest posts
 
 <ul>
-<li id="testing">&lt;span class="emph"&gt;Testing&lt;/span&gt;</li>
+<li><a href="http://kipid.tistory.com/entry/%EA%B1%B4%EA%B0%95%ED%95%98%EA%B2%8C-%EA%B3%BC%ED%95%99%EC%A0%81%EC%9C%BC%EB%A1%9C-%EB%8B%A4%EC%9D%B4%EC%96%B4%ED%8A%B8-%ED%95%98%EA%B8%B0">건강하게 과학적으로 다이어트 하기</a>, 2015-05-21</li>
+<li><a href="http://kipid.tistory.com/entry/%ED%95%9C%EA%B8%80-%EC%B4%88%EC%84%B1%EA%B2%80%EC%83%89-in-Javascript">한글 초성검색 in Javascript</a>, 2015-05-14</li>
+<li><a href="http://kipid.tistory.com/entry/Youtube-Download">Youtube Download</a>, 2015-05-14</li>
+<li><a href="http://kipid.tistory.com/entry/%EC%9D%8C%EC%8B%9D%EC%A0%90-%ED%95%A0%EC%9D%B8%EC%A0%95%EB%B3%B4-%EC%A0%95%EB%A6%AC">음식점 할인정보 정리. (App Surprise)</a>, 2015-05-13</li>
+<li><a href="http://kipid.tistory.com/entry/iframe-test-of-Recoevenet">iframe test of Recoeve.net</a>, 2015-05-11</li>
+<li><a href="http://kipid.tistory.com/entry/imgur-Embed-album">imgur - Embed album</a>, 2015-05-10</li>
+<li><a href="http://kipid.tistory.com/entry/Recoeve-net-Feedbacks-Error-reports-and-Suggestions">Recoeve.net : Feedbacks, Error reports, and Suggestions</a>, 2015-04-29</li>
 <li><a href="http://kipid.tistory.com/entry/2014-2015-%EC%B4%9D%EB%A6%AC%ED%9B%84%EB%B3%B4-%EC%9D%B4%EC%99%84%EA%B5%AC-%EB%AC%B8%EC%B0%BD%EA%B7%B9-%EC%95%88%EB%8C%80%ED%9D%AC-%ED%94%84%EB%A1%9C%ED%95%84-%EB%B9%84%EA%B5%90">2014~2015 총리후보, 이완구(李完九), 문창극(文昌克), 안대희(安大熙) 프로필 비교</a>, 2014-06-14</li>
 <li><a href="http://kipid.tistory.com/entry/Vertical-center-align-by-CSS-in-HTML">Vertical center align by CSS in HTML</a>, 2015-02-05</li>
 <li><a href="http://kipid.tistory.com/entry/Java-Serializable-Object-to-Byte-Array-or-SQL-BLOB">Java Serializable Object to Byte Array (byte[] or SQL BLOB)</a>, 2015-02-05</li>
-<li><a href="http://kipid.tistory.com/entry/Change-browser-URL-without-reloading-a-page">Change browser URL (window.location) without reloading or redirecting a page</a>, 2015-02-05</li>
+<li><a href="http://kipid.tistory.com/entry/Change-browser-URL-without-reloading-a-page">Change browser URL (window.location) without reloading or redirecting a page</a>, 2015-02-05<br>
+window.history replaceState() and pushState()</li>
 <li><a href="http://kipid.tistory.com/entry/Some-lights-are-slower-than-the-speed-of-light">특정 빛은 빛의 속도보다 느리다? (Some lights are slower than the speed of light?)</a>, 2015-01-31</li>
 <li><a href="http://kipid.tistory.com/entry/Sharing-URI-through-SNS">SNS 내보내기/공유하기 (Sharing a URI link through SNS)</a>, 2015-01-16</li>
 <li><a href="http://kipid.tistory.com/entry/Email-by-JAVA">Email by JAVA (자바 프로그램을 이용해 이메일 보내기)</a>, 2015-01-15</li>
@@ -154,8 +161,11 @@ Fuzzy search 갤s 에서는 textarea 로 바꿔야 제대로 돌아가는듯?
 
 <ul>
 <li><a class="emph" href="http://kipid.tistory.com/entry/Introducing-what-we-are-making-Recoevenet">Introducing what we are making : Recoeve.net</a>, 2014-11-21</li>
+<li><a href="http://kipid.tistory.com/entry/Recoeve-net-Feedbacks-Error-reports-and-Suggestions">Recoeve.net : Feedbacks, Error reports, and Suggestions</a>, 2015-04-29</li>
+<li><a href="http://kipid.tistory.com/entry/iframe-test-of-Recoevenet">iframe test of Recoeve.net</a>, 2015-05-11</li>
+<li><a href="http://kipid.tistory.com/entry/%EC%9D%8C%EC%8B%9D%EC%A0%90-%ED%95%A0%EC%9D%B8%EC%A0%95%EB%B3%B4-%EC%A0%95%EB%A6%AC">음식점 할인정보 정리. (App Surprise)</a>, 2015-05-13</li>
 <li>The rest are hiden for the security reason. And these will be open after 5 years from now. (2020)</li>
-<li><a href="http://kipid.tistory.com/entry/Auto-Completion-and-Fuzzy-Search">Auto Completion, and Fuzzy Search</a>, 2014-12-28 (비공개 포스트)</li>
+<!-- <li><a href="http://kipid.tistory.com/entry/Auto-Completion-and-Fuzzy-Search">Auto Completion, and Fuzzy Search</a>, 2014-12-28 (비공개 포스트)</li> -->
 </ul>
 
 
@@ -223,6 +233,13 @@ Fuzzy search 갤s 에서는 textarea 로 바꿔야 제대로 돌아가는듯?
 
 
 
+### 생활과학
+
+<ul>
+<li><a href="http://kipid.tistory.com/entry/%EA%B1%B4%EA%B0%95%ED%95%98%EA%B2%8C-%EA%B3%BC%ED%95%99%EC%A0%81%EC%9C%BC%EB%A1%9C-%EB%8B%A4%EC%9D%B4%EC%96%B4%ED%8A%B8-%ED%95%98%EA%B8%B0">건강하게 과학적으로 다이어트 하기</a>, 2015-05-21</li>
+</ul>
+
+
 ##[.no-sec-N#sec-IT] [IT/Programming] Category
 
 ###[#sec-IT-HTML] HTML related (HTML, css, javascript 관련 이야기들)
@@ -275,7 +292,8 @@ Fuzzy search 갤s 에서는 textarea 로 바꿔야 제대로 돌아가는듯?
 <li><a href="http://kipid.tistory.com/entry/Learning-AJAX">Learning AJAX</a>, 2014-06-02</li>
 <li><a href="http://kipid.tistory.com/entry/Cloud-Server-Services-eg-Amazon-Web-Services">Cloud Server Services (eg. Amazon Web Services)</a>, 2015-01-03</li>
 <li><a class="emph" href="http://kipid.tistory.com/entry/HTTP-Cookie-in-Web-HTML-Javascript-and-Server">HTTP Cookie in Web / HTML / Javascript and Server</a>, 2014-08-31</li>
-<li><a href="http://kipid.tistory.com/entry/Change-browser-URL-without-reloading-a-page">Change browser URL (window.location) without reloading or redirecting a page</a>, 2015-02-05</li>
+<li><a href="http://kipid.tistory.com/entry/Change-browser-URL-without-reloading-a-page">Change browser URL (window.location) without reloading or redirecting a page</a>, 2015-02-05<br>
+window.history replaceState() and pushState()</li>
 <li><a href="http://kipid.tistory.com/entry/Email-by-JAVA">Email by JAVA (자바 프로그램을 이용해 이메일 보내기)</a>, 2015-01-15</li>
 </ul>
 
@@ -293,6 +311,7 @@ Fuzzy search 갤s 에서는 textarea 로 바꿔야 제대로 돌아가는듯?
 </ul>
 <div class="p"></div>
 <ul>
+<li><a href="http://kipid.tistory.com/entry/imgur-Embed-album">imgur - Embed album</a>, 2015-05-10</li>
 <li><a href="http://kipid.tistory.com/entry/Sharing-URI-through-SNS">SNS 내보내기/공유하기 (Sharing a URI link through SNS)</a>, 2015-01-16</li>
 <li><a href="http://kipid.tistory.com/entry/embedding-twitter-tweet">트위터 트윗 퍼오기</a>, 2014-02-11</li>
 <li><a href="http://kipid.tistory.com/entry/Facebook-comment-test">댓글 플러그인 | 위젯 (SNS comment plug-in | widget)</a>, 2014-01-17</li>
@@ -311,6 +330,7 @@ Fuzzy search 갤s 에서는 textarea 로 바꿔야 제대로 돌아가는듯?
 <li><a href="http://kipid.tistory.com/entry/Sorting-Algorithm">정렬법 (Sorting Algorithm)</a>, 2014-02-10</li>
 <li><a href="http://kipid.tistory.com/entry/Hash-Table-and-Hash-function">Hash Table and Hash function</a>, 2014-02-10</li>
 <li><a class="emph" href="http://kipid.tistory.com/entry/Studying-SQL-Structured-Query-Language">SQL (Structured Query Language) 을 배워보자</a>, 2014-03-06</li>
+<li><a href="http://kipid.tistory.com/entry/%ED%95%9C%EA%B8%80-%EC%B4%88%EC%84%B1%EA%B2%80%EC%83%89-in-Javascript">한글 초성검색 in Javascript</a>, 2015-05-14</li>
 </ul>
 
 
@@ -322,6 +342,7 @@ Fuzzy search 갤s 에서는 textarea 로 바꿔야 제대로 돌아가는듯?
 <li><a href="http://kipid.tistory.com/entry/Introducing-Recommending-good-code-editors">괜찮은 에디터 소개 및 추천 (Introducing-Recommending good code editors)</a>, 2014-03-03</li>
 <li><a href="http://kipid.tistory.com/entry/Programming-Languages">여러가지 프로그래밍 언어들</a>, 2014-01-24</li>
 <li><a href="http://kipid.tistory.com/entry/%ED%95%9C%EA%B5%AD-IT%EC%9D%98-%EB%AF%B8%EB%9E%98">한국 IT의 미래</a>, 2014-03-24</li>
+<li><a href="http://kipid.tistory.com/entry/Youtube-Download">Youtube Download</a>, 2015-05-14</li>
 </ul>
 
 
@@ -430,6 +451,7 @@ Fuzzy search 갤s 에서는 textarea 로 바꿔야 제대로 돌아가는듯?
 
 <ol class="refs">
 <li id="ref-kipid"><a href="http://kipid.tistory.com/entry/Lists">kipid's blog in tistory</a></li>
+<li id="ref-recoeve"><a href="http://recoeve.net/user/kipid">kipid on Recoeve.net</a></li>
 </ol>
 </codeprint><!-- docuK-docu -->
 
@@ -482,11 +504,10 @@ MathJax.Hub.Config({
 		kipid.fsFullList.push({"txt":txt, "html":html});
 	}
 	RegExp.quote=function(str) {
-		return (str+'').replace(/[.?*+^$[\]\\(){}|-]/g, "\\$&").replace(/\s/g, "\\s");
+		return (str+'').replace(/[.?*+^$[\]\\(){}|-]/g, "\\$&").replace(/\s/g, "[\\s\\S]");
 	};
 	kipid.arrayFuzzyRegExs=function(fuzzyStr) {
 		var res=[];
-		fuzzyStr=fuzzyStr.replace(/[\n\t]/g, "");
 		for (var i=0;i<fuzzyStr.length;i++) {
 			res.push( new RegExp(RegExp.quote(fuzzyStr.charAt(i)), "ig") );
 		}
