--- a/Lists.html
+++ b/Lists.html
@@ -1,19 +1,20 @@
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=3, user-scalable=yes"/>
+
 <codeprint id="docuK-style">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 <div class="docuK rendered"><div class="sec" id="docuK-log"></div></div>
 <!-- From kipid.tistory CDN -->
 <link rel="stylesheet" media="all" type="text/css" href="http://cfs.tistory.com/custom/blog/146/1468360/skin/images/docuK-2.2.css">
-<script src="http://cfs.tistory.com/custom/blog/146/1468360/skin/images/docuK-prepare-2.2.js"></script>
+<script src="http://cfs.tistory.com/custom/blog/146/1468360/skin/images/docuK-prepare-2.2.js" charset="utf-8"></script>
+</codeprint><!-- docuK-style -->
+
 <style>
 .docuK a.emph {font-weight:bold}
 .docuK a.emph:link {color:rgb(255,160,200)}
 .docuK a.emph:visited {color:rgb(255,140,180)}
 .docuK a.emph:active {color:rgb(80,250,250)}
 .docuK a.emph:hover {color:rgb(200,255,100); text-decoration:underline}
-</style>
-</codeprint><!-- docuK-style -->
-
-<style>
 #fuzzy-search-container {
 	position:fixed; left:0; top:0;
 	z-index:100;
@@ -66,7 +67,6 @@
 	width:100%; height:100%;
 	font-size:1.8em; line-height:1.0;
 }
-
 @media all and (min-height:500px) {
 	#fuzzy-search-list {max-height:430px;}
 }
@@ -126,6 +126,7 @@ Fuzzy search 갤s 에서는 textarea 로 바꿔야 제대로 돌아가는듯?
 ##[.no-sec-N#sec-Newest] Newest posts
 
 <ul>
+<li><a target="_blank" href="http://kipid.tistory.com/entry/URI-rendering-test">URI rendering test</a>, 2015-07-10</li>
 <li><a target="_blank" href="http://kipid.tistory.com/entry/2015-%EB%AC%B4%ED%95%9C%EB%8F%84%EC%A0%84-%EA%B0%80%EC%9A%94%EC%A0%9C">2015 무한도전 가요제</a>, 2015-07-07</li>
 <li><a target="_blank" href="http://kipid.tistory.com/entry/%ED%8E%98%EC%9D%B4%EC%8A%A4%EB%B6%81-%ED%8D%BC%EC%98%A4%EA%B8%B0-Embeding-facebook-post">페이스북 포스트 퍼오기 (Embeding facebook post)</a>, 2015-07-01</li>
 <li><a target="_blank" href="http://kipid.tistory.com/entry/%EC%B9%B4%EB%9D%BC-KARA-Boy-Friend-%EC%83%81%ED%95%B4-%ED%95%A9%EB%8F%99-%EC%BD%98%EC%84%9C%ED%8A%B8-20150629">카라 (KARA) &amp; Boy Friend - 상해 합동 콘서트</a>, 2015-06-29</li>
@@ -145,25 +146,6 @@ Fuzzy search 갤s 에서는 textarea 로 바꿔야 제대로 돌아가는듯?
 <li><a target="_blank" href="http://kipid.tistory.com/entry/iframe-test-of-Recoevenet">iframe test of Recoeve.net</a>, 2015-05-11</li>
 <li><a target="_blank" href="http://kipid.tistory.com/entry/imgur-Embed-album">imgur - Embed album</a>, 2015-05-10</li>
 <li><a target="_blank" href="http://kipid.tistory.com/entry/Recoeve-net-Feedbacks-Error-reports-and-Suggestions">Recoeve.net : Feedbacks, Error reports, and Suggestions</a>, 2015-04-29</li>
-<!-- <li><a target="_blank" href="http://kipid.tistory.com/entry/2014-2015-%EC%B4%9D%EB%A6%AC%ED%9B%84%EB%B3%B4">2014~2015 총리후보, 황교안(黃敎安), 이완구(李完九), 문창극(文昌克), 안대희(安大熙) 프로필 비교</a>, 2014-06-14</li>
-<li><a target="_blank" href="http://kipid.tistory.com/entry/Vertical-center-align-by-CSS-in-HTML">Vertical center align by CSS in HTML</a>, 2015-02-05</li>
-<li><a target="_blank" href="http://kipid.tistory.com/entry/Java-Serializable-Object-to-Byte-Array-or-SQL-BLOB">Java Serializable Object to Byte Array (byte[] or SQL BLOB)</a>, 2015-02-05</li>
-<li><a target="_blank" href="http://kipid.tistory.com/entry/Change-browser-URL-without-reloading-a-page">Change browser URL (window.location) without reloading or redirecting a page</a>, 2015-02-05<br>
-window.history replaceState() and pushState()</li>
-<li><a target="_blank" href="http://kipid.tistory.com/entry/Some-lights-are-slower-than-the-speed-of-light">특정 빛은 빛의 속도보다 느리다? (Some lights are slower than the speed of light?)</a>, 2015-01-31</li>
-<li><a target="_blank" href="http://kipid.tistory.com/entry/Sharing-URI-through-SNS">SNS 내보내기/공유하기 (Sharing a URI link through SNS)</a>, 2015-01-16</li>
-<li><a target="_blank" href="http://kipid.tistory.com/entry/Email-by-JAVA">Email by JAVA (자바 프로그램을 이용해 이메일 보내기)</a>, 2015-01-15</li>
-<li><a target="_blank" href="http://kipid.tistory.com/entry/2015-%EB%B0%95%EA%B7%BC%ED%98%9C-%EB%8C%80%ED%86%B5%EB%A0%B9-%EC%8B%A0%EB%85%84-%EA%B8%B0%EC%9E%90%ED%9A%8C%EA%B2%AC-%EC%98%81%EC%83%81">2015 박근혜 대통령 신년 기자회견 영상</a>, 2015-01-12</li>
-<li><a target="_blank" href="http://kipid.tistory.com/entry/HTML-%EC%97%90%EC%84%9C-%EB%8F%99%EC%98%81%EC%83%81-%EC%97%B0%EC%86%8D-%EC%9E%AC%EC%83%9D%ED%95%98%EA%B8%B0-playlist-shuffle-replay">HTML 에서 동영상 연속 재생하기 (playlist, shuffle, replay)</a>, 2015-01-07</li>
-<li><a target="_blank" href="http://kipid.tistory.com/entry/%EB%B6%80%EB%8F%99%EC%82%B0-%EC%A0%95%EC%B1%85-%EA%B0%80%EA%B2%A9-%EC%96%B4%EB%94%94%EB%A1%9C-%EA%B0%80%EA%B3%A0-%EC%9E%88%EC%9D%84%EA%B9%8C">부동산 정책, 가격 어디로 가고 있을까?</a>, 2015-01-07</li>
-<li><a target="_blank" href="http://kipid.tistory.com/entry/Learning-AngularJS">Learning AngularJS</a>, 2015-01-05</li>
-<li><a target="_blank" href="http://kipid.tistory.com/entry/Encode-Unescape-and-Decode-Escape-URI-Component">Encode/Unescape and Decode/Escape URI Component</a>, 2015-01-04</li>
-<li><a target="_blank" href="http://kipid.tistory.com/entry/Cloud-Server-Services-eg-Amazon-Web-Services">Cloud Server Services (eg. Amazon Web Services)</a>, 2015-01-03</li>
-<li><a target="_blank" href="http://kipid.tistory.com/entry/KARA-HARA-On-and-Off-at-MBC-Music">구하라의 On and Off at MBC Music</a>, 2014-12-30</li>
-<li><a target="_blank" href="http://kipid.tistory.com/entry/%EC%8B%9C%EB%8C%80%EA%B3%B5%EA%B0%90-%EA%B7%B8%EB%93%A4%EA%B3%BC-%ED%86%B5%ED%95%98%EB%8A%94-%EA%B8%B8-%EC%B2%AD%EB%85%84-%EB%B9%88%EA%B3%A4">시대공감 -  청년 빈곤. 그들과 통하는 길.</a>, 2014-12-29</li>
-<li><a target="_blank" href="http://kipid.tistory.com/entry/SAF-SBS-Awards-Festival">SAF (SBS Awards Festival) 움짤 모음</a>, 2014-12-28</li>
-<li><a target="_blank" href="http://kipid.tistory.com/entry/%EC%88%98%EB%A9%B4%EC%9D%98-%EA%B3%BC%ED%95%99-Science-of-Sleeping">수면의 과학 (Science of Sleeping)</a>, 2014-12-28 (미완)</li>
-<li><a target="_blank" href="http://kipid.tistory.com/entry/Auto-Completion-and-Fuzzy-Search">Auto Completion, and Fuzzy Search</a>, 2014-12-28 (비공개 포스트)</li> -->
 </ul>
 
 
@@ -188,9 +170,10 @@ window.history replaceState() and pushState()</li>
 <li><a target="_blank" class="emph" href="http://kipid.tistory.com/entry/Introducing-what-we-are-making-Recoevenet">Introducing what we are making : Recoeve.net</a>, 2014-11-21</li>
 <li><a target="_blank" href="http://kipid.tistory.com/entry/Recoeve-net-Feedbacks-Error-reports-and-Suggestions">Recoeve.net : Feedbacks, Error reports, and Suggestions</a>, 2015-04-29</li>
 <li><a target="_blank" href="http://kipid.tistory.com/entry/iframe-test-of-Recoevenet">iframe test of Recoeve.net</a>, 2015-05-11</li>
+<li><a target="_blank" href="http://kipid.tistory.com/entry/URI-rendering-test">URI rendering test</a>, 2015-07-10</li>
 <li><a target="_blank" href="http://kipid.tistory.com/entry/%EC%9D%8C%EC%8B%9D%EC%A0%90-%ED%95%A0%EC%9D%B8%EC%A0%95%EB%B3%B4-%EC%A0%95%EB%A6%AC">음식점 할인정보 정리. (App Surprise)</a>, 2015-05-13</li>
-<li>The rest are hiden for the security reason. And these will be open after 5 years from now. (2020)</li>
-<!-- <li><a target="_blank" href="http://kipid.tistory.com/entry/Auto-Completion-and-Fuzzy-Search">Auto Completion, and Fuzzy Search</a>, 2014-12-28 (비공개 포스트)</li> -->
+<!-- <li>The rest are hiden for the security reason. And these will be open after 5 years from now. (2020)</li>
+<li><a target="_blank" href="http://kipid.tistory.com/entry/Auto-Completion-and-Fuzzy-Search">Auto Completion, and Fuzzy Search</a>, 2014-12-28 (비공개 포스트)</li> -->
 </ul>
 
 
@@ -489,12 +472,11 @@ window.history replaceState() and pushState()</li>
 <li id="ref-kipid"><a target="_blank" href="http://kipid.tistory.com/entry/Lists">kipid's blog in tistory</a></li>
 <li id="ref-recoeve"><a target="_blank" href="http://recoeve.net/user/kipid">kipid on Recoeve.net</a></li>
 </ol>
-</codeprint><!-- docuK-docu -->
+</codeprint><!-- SEE -->
 
 <codeprint id="docuK-script">
 <script>
-window.kipid=window.kipid||{};
-kipid.wait=500;
+kipid.wait=512;
 kipid.delayPad=0;
 </script>
 <script type="text/x-mathjax-config">
@@ -510,7 +492,7 @@ MathJax.Hub.Config({
 });
 </script>
 <!-- From kipid.tistory CDN -->
-<script src="http://cfs.tistory.com/custom/blog/146/1468360/skin/images/docuK-postProcess-2.2.js"></script>
+<script src="http://cfs.tistory.com/custom/blog/146/1468360/skin/images/docuK-postProcess-2.2.js" charset="utf-8"></script>
 </codeprint><!-- docuK-script -->
 
 <script>
